# s2json

./: .gitignore  .npmignore  .vscodeignore  Cargo.toml  LICENSE  README.md  TODO  bacon.toml  bun.lockb  bunfig.toml  cobertura.xml  package.json  package.nls.json  rustfmt.toml  test.ts  tsconfig.eslint.json  tsconfig.json  vsc-extension-quickstart.md
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  pages.yml  test.yml
docs/: hierarchy.html  index.html  modules.html
docs/assets/: highlight.css  navigation.js  search.js
docs/classes/: Layer.html  Tile.html  TileStore.html
docs/functions/: IJtoST.html  MercPoint.altitudeFromMercatorZ.html  MercPoint.bboxToXYZBounds.html  MercPoint.convert.html  MercPoint.latFromMercatorY.html  MercPoint.llToMerc.html  MercPoint.llToPX.html  MercPoint.llToTile.html  MercPoint.llToTilePx.html  MercPoint.lngFromMercatorX.html  MercPoint.mercToLL.html  MercPoint.mercatorLatScale.html  MercPoint.mercatorXfromLng.html  MercPoint.mercatorYfromLat.html  MercPoint.mercatorZfromAltitude.html  MercPoint.pxToLL.html  MercPoint.pxToTile.html  MercPoint.tilePxBounds.html  MercPoint.xyzToBBOX.html  S2CellID.boundsST.html  S2CellID.centerST.html  S2CellID.child.html  S2CellID.childPosition.html  S2CellID.children.html  S2CellID.childrenIJ.html  S2CellID.contains.html  S2CellID.distance.html  S2CellID.face.html  S2CellID.fromDistance.html  S2CellID.fromFace.html  S2CellID.fromIJ.html  S2CellID.fromIJSame.html  S2CellID.fromIJWrap.html  S2CellID.fromLonLat.html  S2CellID.fromS2Point.html  S2CellID.fromST.html  S2CellID.fromUV.html  S2CellID.intersects.html  S2CellID.isFace.html  S2CellID.isLeaf.html  (+152 more)
docs/interfaces/: BaseFeature.html  BaseFeatureCollection.html  BaseGeometry.html  ConvertedGeometry.html  Feature.html  FeatureCollection.html  LineString3DGeometry.html  LineStringGeometry.html  MultiLineString3DGeometry.html  MultiLineStringGeometry.html  MultiPoint3DGeometry.html  MultiPointGeometry.html  MultiPolygon3DGeometry.html  MultiPolygonGeometry.html  Point3DGeometry.html  PointGeometry.html  Polygon3DGeometry.html  PolygonGeometry.html  S2Feature.html  S2FeatureCollection.html  STPoint.html  TileStoreOptions.html  VectorBaseGeometry.html  VectorMultiPolygonGeometry.html  VectorPoint.html  VectorPolygonGeometry.html
docs/modules/: MercPoint.html  S2CellID.html  S2Coords.html  S2Point.html  mercID.html
docs/types/: Attributions.html  BBOX.html  BBox-1.html  BBox3D.html  ConvertedGeometry.html  ConvertedGeometryList.html  Coordinates.html  Face.html  Feature.html  FeatureCollection.html  FeatureCollectionType.html  FeatureCollections.html  FeatureType.html  Features.html  Geometry.html  GeometryType.html  JSONCollection.html  LineString.html  LineString3D.html  LineString3DGeometry.html  LineStringGeometry.html  LineStringMValues.html  MValue.html  MValues.html  MercPoint.Sources.html  MultiLineString.html  MultiLineString3D.html  MultiLineString3DGeometry.html  MultiLineStringGeometry.html  MultiLineStringMValues.html  MultiPoint.html  MultiPoint3D.html  MultiPoint3DGeometry.html  MultiPointGeometry.html  MultiPolygon.html  MultiPolygon3D.html  MultiPolygon3DGeometry.html  MultiPolygonGeometry.html  MultiPolygonMValues.html  Point.html  (+35 more)
docs/variables/: A.html  EARTH_CIRCUMFERENCE.html  EARTH_RADIUS.html  EARTH_RADIUS_EQUATORIAL.html  EARTH_RADIUS_POLAR.html  MARS_RADIUS.html  MARS_RADIUS_EQUATORIAL.html  MARS_RADIUS_POLAR.html  MAXEXTENT.html  MAXLAT.html
fixtures/geojson/feature/: one.geojson
fixtures/geojson/geometry/: linestring-xyz.geojson  multilinestring-xyz.geojson  multipoint-xyz.geojson  multipolygon-xyz.geojson  polygon-xyz.geojson
fixtures/s2json/: points.s2json
rust/: Cargo.toml  convert.rs  geometry.rs  id.rs  lib.rs  map.rs  simplify.rs  tile.rs  util.rs  value.rs  value_impl.rs  values.rs  vector_point.rs
rust-core/: Cargo.toml  lib.rs  map.rs  shape.rs  value.rs  value_impl.rs  vector_point.rs
rust-core/geometry/: bbox.rs  impls.rs  interpolate.rs  mod.rs  primitive.rs  vector.rs  vector_point.rs
rust-core/impls/: json.rs  mod.rs  shape.rs  value.rs
rust-core/tests/: geometry.rs  interpolate.rs  map.rs  mod.rs  value.rs  vector_point.rs
rust-core/tests/impls/: json.rs  mod.rs  shape.rs  value.rs
rust-derive/: Cargo.toml  README.md  json.rs  lib.rs  mvalue.rs  prim_value.rs
rust-derive/tests/: mod.rs
rust-test/: Cargo.toml
rust-test/src/: main.rs
rust/geometry/: bbox.rs  mod.rs  primitive.rs  vector.rs
rust/s2/: cellid.rs  convert.rs  coords.rs  coords_internal.rs  mod.rs  point.rs
rust/wm/: cellid.rs  clip.rs  convert.rs  coords.rs  lonlat.rs  mod.rs
s2json-spec/: CHANGELOG.md  README.md
s2json-spec/1.0.0/: README.md
src/: bbox.ts  clip.ts  convert.ts  geometry.spec.ts  geometry.ts  id.ts  index.ts  s2json.schema.json  simplify.ts  tile.ts  util.ts  values.spec.ts  values.ts
src/s2/: convert.ts  index.ts  s2CellID.ts  s2Coords.ts  s2Point.ts
src/wm/: clip.ts  convert.ts  index.ts  mercCoords.ts  mercID.ts
test/: bbox.test.ts  clip.test.ts  convert.test.ts  id.test.ts  index.test.ts  schema.test.ts  simplify.test.ts  tile.test.ts  util.test.ts  values.test.ts
test/s2/: convert.test.ts  s2CellID.test.ts  s2Coords.test.ts  s2Point.test.ts
test/wm/: clip.test.ts  convert.test.ts  mercCoords.test.ts  mercID.test.ts
