[package]
name = "s2json"
version = "1.5.2"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library supports the S2JSON 1.0 Specification"
documentation = "https://docs.rs/s2json"
homepage = "https://github.com/OpenS2/s2json"
repository = "https://github.com/OpenS2/s2json"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
exclude = [
    "/assets",
    "/fixtures",
    "/syntaxes",
    "s2json-spec-1.0.2.vsix",
    "language-configuration.json",
    "/benchmarks",
    "/coverage",
    "/docs",
    "/test",
    "/tools",
    "/src",
    "/s2json-spec",
    "TODO",
    "/.github",
]

[lib]
name = "s2json"
path = "rust/lib.rs"
bench = true

[features]
default = ["quadratic"] # Default feature
quadratic = []          # Feature for quadratic projection
tan = []                # Feature for tangential projection

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]

[profile.bench]
opt-level = 3
