[workspace]
members = ["rust", "rust-core", "rust-derive"]
default-members = ["rust"]
resolver = "2"

[workspace.package]
version = "1.39.0"
edition = "2024"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library supports the S2JSON 1.0 Specification"
documentation = "https://docs.rs/s2json"
homepage = "https://github.com/OpenS2/s2json"
repository = "https://github.com/OpenS2/s2json"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"

[workspace.dependencies]
# LOCAL
s2json = { path = "./rust", version = "1.35.0" }
s2json-core = { path = "./rust-core", version = "1.35.0" }
s2json-derive = { path = "./rust-derive", version = "1.35.0" }
# EXTERNAL
libm = "0.2"
pbf = "1.22"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.bench]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
