[package]
name = "s2json-core"
publish = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "s2json_core"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = { workspace = true }
pbf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]

[profile.bench]
opt-level = 3
