[package]
name = "s2json-derive"
publish = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
# LOCAL
s2json-core = { workspace = true }
# EXTERNAL
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
proc-macro-crate = "3.3"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
proc-macro = true
name = "s2json_derive"
path = "lib.rs"
bench = true
