[package]
name = "s2json"
version = "1.19.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library supports the S2JSON 1.0 Specification"
documentation = "https://docs.rs/s2json"
homepage = "https://github.com/OpenS2/s2json"
repository = "https://github.com/OpenS2/s2json"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"

[lib]
name = "s2json"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2json-core = { path = "../rust-core", version = "1.16.0" }
s2json-derive = { path = "../rust-derive", optional = true, version = "1.4.0" }

[features]
default = ["derive"]
derive = ["s2json-derive"]

[dev-dependencies]

[profile.bench]
opt-level = 3
