[package]
name = "s2json"
publish = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "s2json"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
s2json-core = { workspace = true }
s2json-derive = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["s2json-derive"]

[dev-dependencies]

[profile.bench]
opt-level = 3
